correccion de observaciones boton de ver(todos), margen entre botones(todos), mensajes de información (mis pantallas)
faltan:
correcciones de ever, marlon y luis

--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionAlumnos/expediente/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionAlumnos/expediente/index.xhtml
@@ -40,10 +40,10 @@
                         <p:column headerText="Turno" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
                         </p:column>
                         <p:column headerText="Acciones">
-                            <!--                            <i class="icon-users Fs25 Red" style="cursor: pointer" title="Gestionar Docentes"></i>
-                                                        <i class="icon-graduate32 Fs25 Red" style="cursor: pointer" title="Gestionar Alumnos"></i>-->
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Expediente"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Expediente"></i>
+                            <!--                            <i class="icon-users Fs25 Red MarRight10" style="cursor: pointer" title="Gestionar Docentes"></i>
+                                                        <i class="icon-graduate32 Fs25 Red MarRight10" style="cursor: pointer" title="Gestionar Alumnos"></i>-->
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Expediente"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Expediente"></i>
                         </p:column>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
