--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionArchivosMultimedia/index.xhtml
@@ -36,9 +36,9 @@
                             #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Ver Archivo Multimedia"></i>
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Archivo Multimedia"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Archivo Multimedia"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Ver Archivo Multimedia"></i>
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Archivo Multimedia"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Archivo Multimedia"></i>
                         </p:column>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
