--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionClase/claseInteractiva/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionClase/claseInteractiva/index.xhtml
@@ -38,9 +38,9 @@
                             #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Visualizar Clase"></i>
-                            <i class="icon-clock Fs25 Red" style="cursor: pointer" title="Modificar Clase"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Clase"></i>
+                            <i class="icon-list Fs25 Red MarRight10" style="cursor: pointer" title="Visualizar Clase"></i>
+                            <i class="icon-clock Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Clase"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Clase"></i>
                         </p:column>
                     </p:dataTable>
                     <p:commandButton value="Crear"></p:commandButton>
@@ -124,8 +124,8 @@
                                                 #{formatoPantallas.numero4}
                                             </p:column>
                                             <p:column headerText="Acciones">
-                                                <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Interaccion"></i>
-                                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Interaccion"></i>
+                                                <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Interaccion"></i>
+                                                <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Interaccion"></i>
                                             </p:column>
                                         </p:dataTable>
                                         <p:commandButton value="Crear Interacción entre componentes"></p:commandButton>
@@ -204,21 +204,21 @@
                                     </div>
                                     <div class="Container100">
                                         <p:editor value="#{formatoPantallas.campo4000}"></p:editor>
-                                        <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                        <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Página"></i>
                                     </div>
                                 </p:tab>
                                 <p:tab title="+" >
-                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                    <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Página"></i>
                                 </p:tab>
                             </p:tabView>    
                         </p:fieldset>
                         <p:fieldset legend="#{formatoPantallas.campo100}"  toggleable="true">
                             <p:tabView >
                                 <p:tab title="pag #{formatoPantallas.numero3}" >
-                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                    <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Página"></i>
                                 </p:tab>
                                 <p:tab title="pag #{formatoPantallas.numero3}" >
-                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                    <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Página"></i>
                                 </p:tab>
                                 <p:tab title="+" >
 
@@ -310,8 +310,8 @@
                                                 #{formatoPantallas.numero4}
                                             </p:column>
                                             <p:column headerText="Acciones">
-                                                <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Interaccion"></i>
-                                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Interaccion"></i>
+                                                <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Interaccion"></i>
+                                                <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Interaccion"></i>
                                             </p:column>
                                         </p:dataTable>
                                         <p:commandButton value="Crear Interacción entre componentes"></p:commandButton>
@@ -390,21 +390,21 @@
                                     </div>
                                     <div class="Container100">
                                         <p:editor value="#{formatoPantallas.campo4000}"></p:editor>
-                                        <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                        <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Página"></i>
                                     </div>
                                 </p:tab>
                                 <p:tab title="+" >
-                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                    <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Página"></i>
                                 </p:tab>
                             </p:tabView>    
                         </p:fieldset>
                         <p:fieldset legend="#{formatoPantallas.campo100}"  toggleable="true">
                             <p:tabView >
                                 <p:tab title="pag #{formatoPantallas.numero3}" >
-                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                    <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Página"></i>
                                 </p:tab>
                                 <p:tab title="pag #{formatoPantallas.numero3}" >
-                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                    <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Página"></i>
                                 </p:tab>
                                 <p:tab title="+" >
 
