--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionClase/plantillaClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionClase/plantillaClases/index.xhtml
@@ -36,9 +36,9 @@
                         <p:column headerText="Elementos" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-forbid-1 Fs25 Red" style="cursor: pointer" title="Consultar Clase"></i>
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Plantilla de Clase"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Plantilla de Clase"></i>
+                            <i class="icon-forbid-1 Fs25 Red MarRight10" style="cursor: pointer" title="Consultar Clase"></i>
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Plantilla de Clase"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Plantilla de Clase"></i>
                         </p:column>
                     </p:dataTable>
                     <p:commandButton value="Crear"></p:commandButton>
