--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionCompInteract/index.xhtml
@@ -46,9 +46,9 @@
                             #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Mostrar Componente"></i>
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Componente"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Componente"></i>
+                            <i class="icon-list Fs25 Red MarRight10" style="cursor: pointer" title="Mostrar Componente"></i>
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Componente"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Componente"></i>
                         </p:column>
                     </p:dataTable>
                     <p:commandButton value="Crear Componenete Interactivo"></p:commandButton>
@@ -174,8 +174,8 @@
                                     #{formatoPantallas.numero4}
                                 </p:column>
                                 <p:column headerText="Acciones">
-                                    <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Interacción"></i>
-                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Interacción"></i>
+                                    <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Interacción"></i>
+                                    <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Interacción"></i>
                                 </p:column>
                             </p:dataTable>
                             <p:commandButton value="Crear Interacción"></p:commandButton>
