--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/index.xhtml
@@ -44,13 +44,13 @@
                     </p:column>
                     <p:column headerText="Acciones">
                         <p:commandLink action="#{gestionArchivoMultimediaController.mostrar(car)}" >
-                            <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Ver Archivo Multimedia"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Ver Archivo Multimedia"></i>
                         </p:commandLink>
                         <p:commandLink action="#{gestionArchivoMultimediaController.modificar(car)}">
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Archivo Multimedia"></i>
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Archivo Multimedia"></i>
                         </p:commandLink>
                         <p:commandLink action="#{gestionArchivoMultimediaController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Archivo Multimedia"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Archivo Multimedia"></i>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
