--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/index.xhtml
@@ -43,10 +43,10 @@
                         #{car.estado}                </p:column>
                     <p:column headerText="Acciones">
                         <p:commandLink action="#{gestionClasesOnlineController.recibirClase(car)}"> 
-                            <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Recibir Clase en Vivo"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Recibir Clase en Vivo"></i>
                         </p:commandLink>
                         <p:commandLink action="#{gestionClasesOnlineController.transmitirClase(car)}" >
-                            <i class="icon-videocall Fs25 Red" style="cursor: pointer" title="Transmitir Clase en Vivo"></i>
+                            <i class="icon-videocall Fs25 Red MarRight10" style="cursor: pointer" title="Transmitir Clase en Vivo"></i>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
