--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/gestionPlantillas/configurar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/gestionPlantillas/configurar.xhtml
@@ -47,7 +47,7 @@
                     </p:column>
                     <p:column headerText="acciones">
                         <p:commandLink action="#{gestionPlantillasController.eliminarElemPlantilla_(car)}" onclick="PF('dlgEliminar').show();" immediate="true" > 
-                            <i class="icon-close Fs25 Red" title="Eliminar elemento de plantilla"></i>
+                            <i class="icon-close Fs25 Red MarRight10" title="Eliminar elemento de plantilla"></i>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
