--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
@@ -55,11 +55,11 @@
                     #{car.estado}
                 </p:column>
                 <p:column headerText="Acciones">
-                    <p:commandLink action="#{programacionClasesController.ver(car)}"><i class="icon-visibility1 Fs25 Red" title="Ver programación" ></i></p:commandLink>
-                    <p:commandLink action="#{programacionClasesController.modificar(car)}"><i class="icon-list Fs25 Red" title="Consultar Plantilla de Clase" ></i></p:commandLink>
-                    <p:commandLink action="#{programacionClasesController.modificar(car)}"><i class="icon-compose Fs25 Red" title="Modificar Programación" ></i></p:commandLink>
+                    <p:commandLink action="#{programacionClasesController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver programación" ></i></p:commandLink>
+                    <p:commandLink action="#{programacionClasesController.modificar(car)}"><i class="icon-list Fs25 Red MarRight10" title="Consultar Plantilla de Clase" ></i></p:commandLink>
+                    <p:commandLink action="#{programacionClasesController.modificar(car)}"><i class="icon-compose Fs25 Red MarRight10" title="Modificar Programación" ></i></p:commandLink>
                     <p:commandLink action="#{programacionClasesController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                        <i class="icon-close Fs25 Red" title="Eliminar Expediente"></i>
+                        <i class="icon-close Fs25 Red MarRight10" title="Eliminar Expediente"></i>
                     </p:commandLink>
                 </p:column>
             </p:dataTable>
