--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/configurar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/configurar.xhtml
@@ -204,7 +204,7 @@
                             </p:column>
                             <p:column>
                                 <p:commandLink update="acciones" actionListener="#{gestionComponentesInteractivosController.eliminarInteraccion(interac)}" oncomplete="refrescarImagen()">
-                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar"></i>
+                                    <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar"></i>
                                 </p:commandLink>
                             </p:column>
                         </p:dataTable>
