--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
@@ -48,16 +48,16 @@
                     <p:column headerText="Acciones">
                         <p:column headerText="Acciones">
                             <p:commandLink action="#{gestionComponentesInteractivosController.mostrar(car)}" >
-                                <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Mostrar Componente"></i>
+                                <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Mostrar Componente"></i>
                             </p:commandLink>
                             <p:commandLink action="#{gestionComponentesInteractivosController.modificar(car)}">
-                                <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Componente"></i>
+                                <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Componente"></i>
                             </p:commandLink>
                             <p:commandLink action="#{gestionComponentesInteractivosController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Componente"></i>
+                                <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Componente"></i>
                             </p:commandLink>
                             <p:commandLink action="#{gestionComponentesInteractivosController.configurar(car)}"  >
-                                <i class="icon-settings Fs25 Red" style="cursor: pointer" title="Configurar Componente"></i>
+                                <i class="icon-settings Fs25 Red MarRight10" style="cursor: pointer" title="Configurar Componente"></i>
                             </p:commandLink>
                         </p:column>                        
                     </p:column>
