--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
@@ -48,10 +48,10 @@
                         </p:column>
                         <p:column headerText="Acciones">
                             <p:commandLink action="#{mntoUsuariosController.modificar(car)}" update="tabMenu" >
-                                <i class="icon-compose Fs25 Red" title="Modificar Usuario" ></i>
+                                <i class="icon-compose Fs25 Red MarRight10" title="Modificar Usuario" ></i>
                             </p:commandLink>
                             <p:commandLink action="#{mntoUsuariosController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Usuario"></i>
+                                <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Usuario"></i>
                             </p:commandLink>
                         </p:column>
                     </p:dataTable>
