--- a/SIENI/SIENI-web/src/main/webapp/view/formato/buzonNotificaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/buzonNotificaciones/index.xhtml
@@ -38,8 +38,8 @@
                             #{formatoPantallas.campo100}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-chat75 Fs25 Red" style="cursor: pointer" title="Ver Notificación"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Notificación"></i>
+                            <i class="icon-chat75 Fs25 Red MarRight10" style="cursor: pointer" title="Ver Notificación"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Notificación"></i>
                         </p:column>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
