--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionAnioEscolar/matricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionAnioEscolar/matricula/index.xhtml
@@ -38,10 +38,10 @@
                             #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <!--                            <i class="icon-users Fs25 Red" style="cursor: pointer" title="Gestionar Docentes"></i>
-                                                        <i class="icon-graduate32 Fs25 Red" style="cursor: pointer" title="Gestionar Alumnos"></i>-->
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Matrícula"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Matrícula"></i>
+                            <!--                            <i class="icon-users Fs25 Red MarRight10" style="cursor: pointer" title="Gestionar Docentes"></i>
+                                                        <i class="icon-graduate32 Fs25 Red MarRight10" style="cursor: pointer" title="Gestionar Alumnos"></i>-->
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Matrícula"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Matrícula"></i>
                         </p:column>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
