--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionClase/claseOnline/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionClase/claseOnline/index.xhtml
@@ -35,8 +35,8 @@
                             #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones"  filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
-                            <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Recibir Clase en Vivo"></i>
-                            <i class="icon-videocall Fs25 Red" style="cursor: pointer" title="Transmitir Clase en Vivo"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Recibir Clase en Vivo"></i>
+                            <i class="icon-videocall Fs25 Red MarRight10" style="cursor: pointer" title="Transmitir Clase en Vivo"></i>
                         </p:column>
                     </p:dataTable>
                     <p:commandButton value="Crear"></p:commandButton>
