--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionClase/programacionClase/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionClase/programacionClase/index.xhtml
@@ -55,10 +55,10 @@
                             #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-forbid-1 Fs25 Red" style="cursor: pointer" title="Consultar Clase"></i>
-                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Consultar Plantilla de Clase"></i>
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Programación de Clase"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Programación de Clase"></i>
+                            <i class="icon-forbid-1 Fs25 Red MarRight10" style="cursor: pointer" title="Consultar Clase"></i>
+                            <i class="icon-list Fs25 Red MarRight10" style="cursor: pointer" title="Consultar Plantilla de Clase"></i>
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Programación de Clase"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Programación de Clase"></i>
                         </p:column>
                     </p:dataTable>
                     <p:commandButton value="Crear"></p:commandButton>
