--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/index.xhtml
@@ -42,8 +42,8 @@
                             #{formatoPantallas.campo50}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Curso"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Curso"></i>
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Curso"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Curso"></i>
                         </p:column>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
