--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/index.xhtml
@@ -52,16 +52,16 @@
                     </p:column>
                     <p:column headerText="Acciones">
                         <p:commandLink action="#{gestionClaseInteracController.mostrar(car)}" >
-                            <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Vista previa de Clase"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Vista previa de Clase"></i>
                         </p:commandLink>
                         <p:commandLink action="#{gestionClaseInteracController.modificar(car)}">
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Clase"></i>
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Clase"></i>
                         </p:commandLink>
                         <p:commandLink action="#{gestionClaseInteracController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Clase"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Clase"></i>
                         </p:commandLink>
                         <p:commandLink action="#{gestionClaseInteracController.configurar(car)}"  >
-                            <i class="icon-settings Fs25 Red" style="cursor: pointer" title="Configurar Componente"></i>
+                            <i class="icon-settings Fs25 Red MarRight10" style="cursor: pointer" title="Configurar Componente"></i>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
