--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index_.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index_.xhtml
@@ -35,9 +35,9 @@
                             #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones"  filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
-                            <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Visualizar Clase"></i>
-                            <i class="icon-clock Fs25 Red" style="cursor: pointer" title="Modificar Clase"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Clase"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Visualizar Clase"></i>
+                            <i class="icon-clock Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Clase"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Clase"></i>
                         </p:column>
                     </p:dataTable>
                     <p:commandButton value="Crear"></p:commandButton>
@@ -97,8 +97,8 @@
                                                 #{formatoPantallas.campo30}
                                             </p:column>
                                             <p:column headerText="Acciones">
-                                                <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Activación"></i>
-                                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Activación"></i>
+                                                <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Activación"></i>
+                                                <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Activación"></i>
                                             </p:column>
                                         </p:dataTable>
                                         <p:commandButton value="Crear Acivación de componente"></p:commandButton>
@@ -170,8 +170,8 @@
                                                 #{formatoPantallas.numero4}
                                             </p:column>
                                             <p:column headerText="Acciones">
-                                                <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Interaccion"></i>
-                                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Interaccion"></i>
+                                                <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Interaccion"></i>
+                                                <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Interaccion"></i>
                                             </p:column>
                                         </p:dataTable>
                                         <p:commandButton value="Crear Interacción entre componentes"></p:commandButton>
@@ -301,8 +301,8 @@
                                                 #{formatoPantallas.campo30}
                                             </p:column>
                                             <p:column headerText="Acciones">
-                                                <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Activación"></i>
-                                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Activación"></i>
+                                                <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Activación"></i>
+                                                <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Activación"></i>
                                             </p:column>
                                         </p:dataTable>
                                         <p:commandButton value="Crear Acivación de componente"></p:commandButton>
@@ -374,8 +374,8 @@
                                                 #{formatoPantallas.numero4}
                                             </p:column>
                                             <p:column headerText="Acciones">
-                                                <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Interaccion"></i>
-                                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Interaccion"></i>
+                                                <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Interaccion"></i>
+                                                <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Interaccion"></i>
                                             </p:column>
                                         </p:dataTable>
                                         <p:commandButton value="Crear Interacción entre componentes"></p:commandButton>
