--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/gestionPlantillas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/gestionPlantillas/index.xhtml
@@ -49,16 +49,16 @@
                     <p:column headerText="Acciones">
                         <p:column headerText="Acciones">
                             <p:commandLink action="#{gestionPlantillasController.mostrar(car)}" >
-                                <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Mostrar Plantilla"></i>
+                                <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Mostrar Plantilla"></i>
                             </p:commandLink>
                             <p:commandLink action="#{gestionPlantillasController.modificar(car)}">
-                                <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Plantilla"></i>
+                                <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Plantilla"></i>
                             </p:commandLink>
                             <p:commandLink action="#{gestionPlantillasController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Plantilla"></i>
+                                <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Plantilla"></i>
                             </p:commandLink>
                             <p:commandLink action="#{gestionPlantillasController.configurar(car)}"  >
-                                <i class="icon-settings Fs25 Red" style="cursor: pointer" title="Configurar Plantilla"></i>
+                                <i class="icon-settings Fs25 Red MarRight10" style="cursor: pointer" title="Configurar Plantilla"></i>
                             </p:commandLink>
                         </p:column>                        
                     </p:column>
