--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionEvaluaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionEvaluaciones/index.xhtml
@@ -45,9 +45,9 @@
                             #{formatoPantallas.numero3}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Ver Evaluación"></i>
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Evaluación"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Evaluación"></i>
+                            <i class="icon-list Fs25 Red MarRight10" style="cursor: pointer" title="Ver Evaluación"></i>
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Evaluación"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Evaluación"></i>
                         </p:column>
                     </p:dataTable>
                     <p:commandButton value="Crear Evaluación"></p:commandButton>
@@ -201,8 +201,8 @@
                                     #{formatoPantallas.numeroDecimal}
                                 </p:column>
                                 <p:column headerText="Acciones">
-                                    <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Pregunta"></i>
-                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Pregunta"></i>
+                                    <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Pregunta"></i>
+                                    <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Pregunta"></i>
                                 </p:column>
                             </p:dataTable>
                             <div class="EmptyBox20"></div>
@@ -272,8 +272,8 @@
                                             <p:inputSwitch onLabel="#{formatoPantallas.campo2}" offLabel="#{formatoPantallas.campo2}"></p:inputSwitch>
                                         </p:column>
                                         <p:column headerText="Acciones">
-                                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Respuesta"></i>
-                                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Respuesta"></i>
+                                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Respuesta"></i>
+                                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Respuesta"></i>
                                         </p:column>
                                     </p:dataTable>
                                     <div class="EmptyBox20"></div>
