--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
@@ -51,10 +51,10 @@
                         </p:column>
                         <p:column headerText="Acciones">
                        
-                        <p:commandLink action="#{gestionCursoController.ver(car)}"><i class="icon-visibility1 Fs25 Red" title="Ver Expediente" ></i></p:commandLink>
-                            <p:commandLink action="#{gestionCursoController.modificar(car)}" ><i class="icon-compose Fs25 Red" title="Modificar Expediente" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionCursoController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Expediente" ></i></p:commandLink>
+                            <p:commandLink action="#{gestionCursoController.modificar(car)}" ><i class="icon-compose Fs25 Red MarRight10" title="Modificar Expediente" ></i></p:commandLink>
                             <p:commandLink action="#{gestionCursoController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                                <i class="icon-close Fs25 Red" title="Eliminar Expediente"></i>
+                                <i class="icon-close Fs25 Red MarRight10" title="Eliminar Expediente"></i>
                             </p:commandLink>
                         </p:column>
                     </p:dataTable>
