--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/gestionMaterias.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/gestionMaterias.xhtml
@@ -44,7 +44,7 @@
                     </p:column>
                     <p:column headerText="acciones">
                         <p:commandLink action="#{gestionarDocentesController.eliminarMateria(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                            <i class="icon-close Fs25 Red" title="Eliminar Materia"></i>
+                            <i class="icon-close Fs25 Red MarRight10" title="Eliminar Materia"></i>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
