--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index_1.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index_1.xhtml
@@ -52,10 +52,10 @@
                         #{car.alDireccion}
                     </p:column>
                     <p:column headerText="Acciones" style="width: 12%">
-                        <p:commandLink action="#{gestionarAlumnosController.ver(car)}"><i class="icon-visibility1 Fs25 Red" title="Ver Expediente" ></i></p:commandLink>
-                        <p:commandLink action="#{gestionarAlumnosController.modificar(car)}"><i class="icon-compose Fs25 Red" title="Modificar Expediente" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionarAlumnosController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Expediente" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionarAlumnosController.modificar(car)}"><i class="icon-compose Fs25 Red MarRight10" title="Modificar Expediente" ></i></p:commandLink>
                         <p:commandLink action="#{gestionarAlumnosController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                            <i class="icon-close Fs25 Red" title="Eliminar Expediente"></i>
+                            <i class="icon-close Fs25 Red MarRight10" title="Eliminar Expediente"></i>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
